k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-capstone-api
  namespace: final-capstone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: final-capstone-api
  template:
    metadata:
      labels:
        app: final-capstone-api
    spec:
      containers:
        - name: api
          image: 116981801353.dkr.ecr.us-east-1.amazonaws.com/capstone-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          startupProbe:
            httpGet:
              path: /api/health
              port: 4000
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: final-capstone-api
  namespace: final-capstone
spec:
  selector:
    app: final-capstone-api
  ports:
    - port: 4000
      targetPort: 4000
