k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-capstone-mongodb
  namespace: final-capstone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: final-capstone-mongodb
  template:
    metadata:
      labels:
        app: final-capstone-mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: final-capstone-mongodb-data
---
apiVersion: v1
kind: Service
metadata:
  name: final-capstone-mongodb
  namespace: final-capstone
spec:
  selector:
    app: final-capstone-mongodb
  ports:
    - port: 27017
      targetPort: 27017
