k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-capstone-ingress
  namespace: final-capstone
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: final-capstone-api
                port:
                  number: 4000
          - path: /welcome
            pathType: Prefix
            backend:
              service:
                name: final-capstone-static-page
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: final-capstone-web
                port:
                  number: 80
